test_files/netlist_cmp/valid/valid_case_20_b.net
R9 PWR COL 1k
Q6 COL BASE 0 0 2N3904
R8 BASE COL 3.3k
R7 PWR BASE 2.2k
V2 PWR 0 9
.model NPN NPN
.op
.backanno
.end
