test_files/netlist_cmp/invalid/invalid_case_20_b.net
V1 A 0 9
R1 A B 2.2k
R2 B C 3.3k
Q1 C B 0 0 BC547B
R3 A C 1k
.model NPN NPN
.op
.backanno
.end
